--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,34 +3,24 @@
 version: "3.0"
 services:
   postgres:
-    image: postgres:10
+    image: postgres:10-alpine
     restart: unless-stopped
-    environment:
-      - POSTGRES_USER=misago
-      - POSTGRES_PASSWORD=misago
+    env_file: .env
+    volumes:
+      - pgdata:/var/lib/postgresql/data/pgdata
     ports:
-      - '127.0.0.1:5432:5432'
+      - 5432:5888
   redis:
-    image: redis:5
+    image: redis:5-alpine
     restart: unless-stopped
   misago:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
-    environment:
-      # Postgres
-      - POSTGRES_USER=misago
-      - POSTGRES_PASSWORD=misago
-      - POSTGRES_DB=misago
-      - POSTGRES_HOST=postgres
-      - POSTGRES_TEST_DB=misago_test
-      # Superuser
-      - SUPERUSER_USERNAME=Admin
-      - SUPERUSER_EMAIL=admin@example.com
-      - SUPERUSER_PASSWORD=password
+    env_file: .env
     ports:
       # Map port 8000 in the container to port 8000 on the host
       # This way we can access the forum through http://localhost:8000
-      - "${MISAGO_DEVSERVER_PORT:-8000}:8000"
+      - 8000:8000
     depends_on:
       - postgres
       - redis
@@ -42,13 +32,7 @@ services:
   celery:
     build: .
     command: celery -A devproject worker --loglevel=info
-    environment:
-      # Postgres
-      - POSTGRES_USER=misago
-      - POSTGRES_PASSWORD=misago
-      - POSTGRES_DB=misago
-      - POSTGRES_HOST=postgres
-      - POSTGRES_TEST_DB=misago_test
+    env_file: .env
     depends_on:
       - postgres
       - redis
@@ -57,4 +41,6 @@ services:
       # Map in the entire project into the container
       # This makes sure files in the container updates on the fly as we were working locally
       - .:/srv/misago:Z
+volumes:
+  pgdata: {}
   
